# skillbasedcontrol-server

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: classdiagram.md
examples/: custom_skill_implementations.py  run_skillserver_opcua.py
examples/skills/: AddSkill.json  MyJointSpaceSkill.json
sbc_server/: __init__.py  baseskill.py  cycletimer.py  mapVar.py  runskillserverhelper.py  skillimplementations.py  skillruntimethread.py  skillserver.py  skillserver_opcua.py  skillserver_opcua_vc.py
tests/: test_Skillruntimethread.py  test_baseskill.py  test_skillserver_opcua.py  test_skillserver_opcua_vc.py
